{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 61,
  "lineage": "4fedeacb-fcd4-d2bb-bbeb-252f718256fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "medusa_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975050333801:internet-gateway/igw-0a406f2c707f99718",
            "id": "igw-0a406f2c707f99718",
            "owner_id": "975050333801",
            "vpc_id": "vpc-0e5b76e2d55c6c199"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "medusa_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:975050333801:loadbalancer/app/medusa-lb/ba4b03af5f45e83c",
            "arn_suffix": "app/medusa-lb/ba4b03af5f45e83c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "medusa-lb-68358815.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:975050333801:loadbalancer/app/medusa-lb/ba4b03af5f45e83c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "medusa-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00528347d534ec33e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e3fdb73a5d8f499d"
              },
              {
                "subnet_id": "subnet-0e603762199465b74"
              }
            ],
            "subnets": [
              "subnet-0e3fdb73a5d8f499d",
              "subnet-0e603762199465b74"
            ],
            "vpc_id": "vpc-0e5b76e2d55c6c199",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.medusa_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:975050333801:listener/app/medusa-lb/ba4b03af5f45e83c/66e0f731e9c0e474",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:975050333801:targetgroup/medusa-tg/9e672f0ecd92de53",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:975050333801:listener/app/medusa-lb/ba4b03af5f45e83c/66e0f731e9c0e474",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:975050333801:loadbalancer/app/medusa-lb/ba4b03af5f45e83c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.medusa_lb",
            "aws_lb_target_group.medusa_tg",
            "aws_security_group.medusa_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "medusa_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:975050333801:targetgroup/medusa-tg/9e672f0ecd92de53",
            "arn_suffix": "targetgroup/medusa-tg/9e672f0ecd92de53",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:975050333801:targetgroup/medusa-tg/9e672f0ecd92de53",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "medusa-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e5b76e2d55c6c199"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "medusa_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975050333801:security-group/sg-00528347d534ec33e",
            "description": "Security group for Medusa ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00528347d534ec33e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "medusa_sg",
            "name_prefix": "",
            "owner_id": "975050333801",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e5b76e2d55c6c199"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}